--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # URL pública do seu servidor (Render, Railway etc.)
-WEBHOOK_URL=https://seu-app.onrender.com/
+WEBHOOK_URL=https://n8n-restaurantordersmanager.onrender.com
 
 # Porta usada pelo n8n
 N8N_PORT=5678
@@ -11,3 +11,6 @@ N8N_BASIC_AUTH_PASSWORD=1234
 
 # Define o host (importante para deploys online)
 N8N_HOST=0.0.0.0
+
+TELEGRAM_BOT_TOKEN=8402740978:AAE8QKrsBLVXR4ndWT1_0Wvn2Z5-xEQNWyc
+ALLOWED_CHAT_ID=-4943207637
